Added authentication and permissions for User and Staff (+ templating for password_resets)

--- a/home/templates/index.html
+++ b/home/templates/index.html
@@ -3,16 +3,19 @@
 {% block title %} <title>OVERRIDE</title> {% endblock %}
 
 {% block content %}
-  <h1>Local Library Home</h1>
-  <p>Welcome to LocalLibrary, a website developed by <em>Jason Vlajankov</em> using the tutorial example on the Mozilla Developer Network!</p>
-  <h2>Dynamic content</h2>
-  <p>The library has the following record counts:</p>
-  <ul>
-    <li><strong>Books:</strong> {{ num_books }}</li>
-    <li><strong>Copies:</strong> {{ num_instances }}</li>
-    <li><strong>Copies available:</strong> {{ num_instances_available }}</li>
-    <li><strong>Authors:</strong> {{ num_authors }}</li>
-  <li><strong>Number of book titles that contains the word 'skul':</strong> {{num_skull}}</li>
-  <li><strong>Number of 'fiction' genres:</strong> {{num_fiction}}</li>
-  </ul>
+    <h1>Local Library Home</h1>
+    <p>Welcome to LocalLibrary, a website developed by <em>Jason Vlajankov</em> using the tutorial example on the
+        Mozilla Developer Network!</p>
+    <h2>Dynamic content</h2>
+    <p>The library has the following record counts:</p>
+    <ul>
+        <li><strong>Books:</strong> {{ num_books }}</li>
+        <li><strong>Copies:</strong> {{ num_instances }}</li>
+        <li><strong>Copies available:</strong> {{ num_instances_available }}</li>
+        <li><strong>Authors:</strong> {{ num_authors }}</li>
+        <li><strong>Number of book titles that contains the word 'skul':</strong> {{ num_skull }}</li>
+        <li><strong>Number of 'fiction' genres:</strong> {{ num_fiction }}</li>
+    </ul>
+
+    <p>You have visited this page: {{ num_visits }} time{{ num_visits|pluralize:',s' }}.</p>
 {% endblock %}
